--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-openpyxl
-pytest
-selenium
-pytest-html
+allure-pytest==2.8.13
+allure-python-commons==2.8.13
+atomicwrites==1.3.0
+attrs==19.3.0
+colorama==0.4.3
+et-xmlfile==1.0.1
+jdcal==1.4.1
+more-itertools==8.2.0
+openpyxl==3.0.3
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.7
+pytest==5.4.1
+pytest-html==2.1.1
+pytest-metadata==1.8.0
+selenium==3.141.0
+six==1.14.0
+urllib3==1.25.9
+wcwidth==0.1.9
